samples/_failures_safe/1761171286_aa3eeb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ecdd60f6.c: In function ‘main’:
./samples/SAFE/__tmp_ecdd60f6.c:202: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_ecdd60f6.c:201:5: error: expected declaration or statement at end of input
  201 |     if
      |     ^~
